force-app/main/default/objects/Compliance_Policy__mdt/fields/Auto_Remediation_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Auto_Remediation_Allowed__c</fullName>
    <label>Auto Remediation Allowed</label>
    <description>Indicates whether automated remediation actions can be taken for violations of this policy.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>