force-app/main/default/objects/Compliance_Policy__mdt/fields/Control_Category__c.field-meta.xml
<CustomField>
    <fullName>Control_Category__c</fullName>
    <label>Control Category</label>
    <type>Text</type>
    <length>100</length>
</CustomField>