force-app/main/default/objects/Compliance_Policy__mdt/fields/Entity_Types__c.field-meta.xml
<CustomField>
    <fullName>Entity_Types__c</fullName>
    <label>Entity Types</label>
    <description>Comma-separated list of Salesforce entity types this policy applies to (e.g., OBJECT, FIELD, FIELD_HISTORY, USER, PERMISSION_SET).</description>
    <type>Text</type>
    <length>255</length>
</CustomField>