force-app/main/default/objects/Compliance_Policy__mdt/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <label>Framework</label>
    <required>true</required>
    <type>Text</type>
    <length>50</length>
</CustomField>