force-app/main/default/objects/Compliance_Policy__mdt/fields/Legal_Citation__c.field-meta.xml
<CustomField>
    <fullName>Legal_Citation__c</fullName>
    <label>Legal Citation</label>
    <type>Text</type>
    <length>255</length>
</CustomField>