force-app/main/default/objects/Compliance_Policy__mdt/fields/Policy_Description__c.field-meta.xml
<CustomField>
    <fullName>Policy_Description__c</fullName>
    <label>Policy Description</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>