force-app/main/default/objects/Compliance_Policy__mdt/fields/Remediation_Steps__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Steps__c</fullName>
    <label>Remediation Steps</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>