force-app/main/default/objects/Compliance_Policy__mdt/fields/Risk_Weight__c.field-meta.xml
<CustomField>
    <fullName>Risk_Weight__c</fullName>
    <label>Risk Weight</label>
    <description>Weight factor for compliance scoring calculations. Higher values indicate more critical policies.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <defaultValue>5.0</defaultValue>
</CustomField>